tests/example_policies/testcase8/testcase8-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkPolicyLists:
  - name: np1
    networkPolicyList:
      - testcase8-networkpolicy1.yaml
    expected_warnings: 0
    
queries:
  - name: emptiness
    emptiness:
      - np1
    expected: 0
  - name: vacuousness
    vacuity:
      - np1
    expected: 1

  - name: redundnacy_np1
    redundancy:
      - np1
    expected: 1
